# CertMesh

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  api.py
app/ui/: index.html
app/ui/css/: theme.css  views.css
app/ui/js/: api.js  app.js  calendar.js  graph.js  learner.js  manager.js  progress.js  quality.js  quiz.js  state.js  trace.js  util.js
data/: fabric_seed.json  learners.json  progress_history.json  work_signals.json
data/knowledge/: certification-catalog-extension.md  certification-enablement-guide.md  team-learning-report.md  workload-insights-report.md
deploy/: Dockerfile  deploy_hosted_agent.md
docs/: agents.md  architecture.md  demo-script.md  iq-layers.md  live-azure-setup.md  orchestration.md  responsible-ai.md  submission-checklist.md
evals/: __init__.py  _last_ablation.json  evaluators.py  foundry_eval.py  gold_cases.jsonl  run_evals.py
scripts/: index_foundry_iq.py
src/certmesh/: __init__.py  calendar_sim.py  config.py  data_access.py  i18n.py  matching.py  orchestrator.py  schemas.py
src/certmesh/agents/: __init__.py  assessment.py  base.py  critic.py  curator.py  engagement.py  manager_insights.py  study_plan.py
src/certmesh/foundry/: __init__.py  client.py  tracing.py
src/certmesh/iq/: __init__.py  fabric_iq.py  foundry_iq.py  work_iq.py
src/certmesh/tools/: __init__.py  ms_learn_mcp.py
tests/: conftest.py  test_agents.py  test_api.py  test_critic.py  test_evals_gate.py  test_iq.py  test_orchestrator.py
